--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,23 +1,18 @@
-autopep8==1.7.0
 bcrypt==4.0.1
 click==8.1.3
 colorama==0.4.6
-distlib==0.3.6
-filelock==3.8.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-platformdirs==2.5.3
-psycopg2==2.9.5
-pycodestyle==2.9.1
+psycopg2-binary==2.9.5
 PyJWT==2.6.0
 python-dotenv==0.21.0
-SQLAlchemy==1.4.44
-toml==0.10.2
-virtualenv==20.16.6
+six==1.16.0
+SQLAlchemy==1.4.43
 Werkzeug==2.2.2
