--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
     "leaflet": "^1.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
