--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,13 @@
     "react-dom": "^17.0.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^3.2.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.1.3",
+    "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.6.16",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
