--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,6 +1,12 @@
+async-timeout==4.0.2
+attrs==22.2.0
+autopep8==1.7.0
 bcrypt==4.0.1
 click==8.1.3
 colorama==0.4.6
+distlib==0.3.6
+filelock==3.8.0
+flasgger==0.9.5
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
 Flask-Cors==3.0.10
@@ -9,10 +15,21 @@ Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.17.3
 MarkupSafe==2.1.1
-psycopg2-binary==2.9.5
+mistune==2.0.4
+packaging==21.3
+platformdirs==2.5.3
+psycopg2==2.9.5
+pycodestyle==2.9.1
 PyJWT==2.6.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
 python-dotenv==0.21.0
+PyYAML==6.0
+redis==4.3.5
 six==1.16.0
-SQLAlchemy==1.4.43
+SQLAlchemy==1.4.44
+toml==0.10.2
+virtualenv==20.16.6
 Werkzeug==2.2.2
